Fix overflow on sidebar modal

--- a/nexaas-app/app/assets/scss/components/_sidebar.scss
+++ b/nexaas-app/app/assets/scss/components/_sidebar.scss
@@ -42,6 +42,11 @@
 
   &-content {
     padding-bottom: 50px;
+    overflow: hidden;
+
+    .inside & {
+      padding-bottom: 120px;
+    }
   }
 
   &-message {
