--- a/nexaas-app/app/assets/scss/helpers/_utils.scss
+++ b/nexaas-app/app/assets/scss/helpers/_utils.scss
@@ -31,6 +31,15 @@
   background-color: rgba(#000, 0.65);
   animation: fadeIn .3s;
 
+  &.inside {
+    top: 65px;
+    background-color: rgba(#000, 0.05);
+
+    .ch-sidebar-container {
+      border-top: 1px solid #eee;
+    }
+  }
+
   @media screen and (max-width: 767px) {
     background-color: #fff;
   }
